色々実装と変更